--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,12 @@
     
     <session-config>
         <session-timeout>
-            30
+            1
         </session-timeout>
     </session-config>
+    
+    <error-page>
+        <error-code>500</error-code>
+        <location>/loginAdmin.jsp</location>
+    </error-page>
 </web-app>
